test_files/netlist_cmp/valid/valid_case_14_a.net
V1 N1 0 8
R1 N1 N2 4k
C1 N2 N3 12n
R2 N3 0 2k
C2 N3 N4 18n
R3 N4 0 1k
.tran 3m
.backanno
.end
